--- a/src/frontend/adminServicos.html
+++ b/src/frontend/adminServicos.html
@@ -56,8 +56,8 @@
                     <th scope="col">Tipo</th>
                     <th scope="col">Empreiteiro</th>
                     <th scope="col">Editar</th>
-                    <th scope="col" id="Cancelar">Cancelar</th>
-                    <th scope="col" id="Concluir">Concluir</th>
+                    <th scope="col" id="elemento1">Cancelar</th>
+                    <th scope="col" id="elemento2">Concluir</th>
                     
                 </tr>
             </thead>
